force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Broker contact</description>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact should be a Broker.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relations (Broker)</relationshipLabel>
    <relationshipName>Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>