force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Controlling Post Link of Related Account</description>
    <formula>FinServ__RelatedContact__r.Account.CPID_Link__c</formula>
    <label>CPID</label>
    <type>Text</type>
</CustomField>