force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Customer_SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>Customer_SourceSystemId__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Source System Id of the related party</description>
    <formula>IF(ISBLANK(FinServ__RelatedContact__r.AccountId), &apos;&apos;, FinServ__RelatedContact__r.Account.Source_System_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source System Id</label>
    <type>Text</type>
</CustomField>