force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>Source_OCV;Integrity_Accurate;Privacy_Personal_Information</complianceGroup>
    <description>Email of the Broker contact</description>
    <formula>Broker__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>