force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/FinServ__Contact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Contact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>RelatedFromContacts</relationshipName>
    <type>Lookup</type>
</CustomField>