force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/FinServ__RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RelatedContact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>RelatedToContacts</relationshipName>
    <type>Lookup</type>
</CustomField>