force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <complianceGroup>Source_OCV;Integrity_Accurate;Privacy_Personal_Information</complianceGroup>
    <description>Mobile Phone number of the Broker contact</description>
    <formula>Broker__r.MobilePhone</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>