force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>The OCV linked to the Broker</description>
    <formula>Broker__r.OCV_ID__c</formula>
    <label>OCV ID</label>
    <type>Text</type>
</CustomField>