force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Display Related Role as Text</description>
    <formula>FinServ__Role__r.Name</formula>
    <label>Relationship</label>
    <type>Text</type>
</CustomField>