force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Retail_TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>Retail_TPMI_SAO__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>TPMI-SAO ID of current Retail accredited Broker</description>
    <formula>Broker__r.RetailTPMISAO__c</formula>
    <label>Retail TPMI-SAO</label>
    <type>Text</type>
</CustomField>