force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Role_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <formula>FinServ__Role__r.Role_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>