force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Staff contact</description>
    <label>Staff</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact should be an ANZ Staff.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relations (Staff)</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>