force-app/main/default/objects/FinServ__ContactContactRelation__c/recordTypes/Broker_Staff.recordType-meta.xml
<RecordType>
    <fullName>Broker_Staff</fullName>
    <active>true</active>
    <label>Broker Staff</label>
</RecordType>