force-app/main/default/objects/FinServ__ContactContactRelation__c/validationRules/ContactAndRelatedContactCannotBeSame.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactAndRelatedContactCannotBeSame</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName &lt;&gt; &apos;Broker_Staff&apos; &amp;&amp; FinServ__Contact__c = FinServ__RelatedContact__c</errorConditionFormula>
    <errorMessage>Contact and Related Contact must be different entities.</errorMessage>
</ValidationRule>