force-app/main/default/objects/FinServ__ContactContactRelation__c/validationRules/FinServ__CCRCanOnlyBeDeactivated.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__CCRCanOnlyBeDeactivated</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISCHANGED(FinServ__Contact__c),ISCHANGED(FinServ__RelatedContact__c),ISCHANGED(FinServ__Role__c)),NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>This record can&apos;t be edited. To update relationship information, you can deactivate this record and create a new one.</errorMessage>
</ValidationRule>