force-app/main/default/objects/FinServ__ContactContactRelation__c/listViews/FinServ__All.listView-meta.xml
<ListView>
    <fullName>FinServ__All</fullName>
    <columns>OCV_ID__c</columns>
    <columns>Broker__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Retail_TPMI_SAO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brokers</label>
</ListView>