force-app/main/default/objects/FinServ__ContactContactRelation__c/listViews/My_Brokers.listView-meta.xml
<ListView>
    <fullName>My_Brokers</fullName>
    <columns>OCV_ID__c</columns>
    <columns>Broker__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Retail_TPMI_SAO__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FinServ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Brokers</label>
</ListView>